syntax = "proto3";

option csharp_namespace = "UserService.Grpc";

package user;

service UserService{
	rpc GetById(UserByIdRequest) returns (UserReply);
}

message UserByIdRequest{
	string id = 1;
}

message UserReply{
	string email = 1;
}